# cpf

./: .clang-format  .gitignore  API_CHANGE.md  CMakeLists.txt  GRAMMAR_EXTENSIONS.md  README.md  THIRD_PARTY_NOTICES.md  TODOS.md
.github/workflows/: ci.yml
cmake/: cpf.cmake  cpf_benchmark_dependencies.cmake  cpf_project_options.cmake  doctest.cmake
cpf/: CMakeLists.txt  cpflib
cpf/analysis/: complexity.h  grammar_analysis.cpp  grammar_analysis.h
cpf/model/: grammar.cpp  grammar.h
cpf/parser/: grammar_loader.cpp  grammar_parser.cpp  grammar_parser.h
cpf/runtime/: api.cpp  api.h  dynamic.cpp  dynamic.h  runtime.cpp
cpfgen/: CMakeLists.txt  cpfgenlib  main.cpp
cpfgen/analysis/: grammar_analysis.cpp  grammar_analysis.h  rule_complexity.cpp  rule_complexity.h
cpfgen/codegen/: code_generator.cpp  code_generator.h
cpfgen/model/: grammar.cpp  grammar.h
cpfgen/parser/: grammar_loader.cpp  grammar_loader.h  grammar_parser.cpp  grammar_parser.h
cpflib/: CMakeLists.txt  cpflib
cpflib/analysis/: complexity.cpp  complexity.h  grammar_analysis.h
cpflib/cmake/: cpf.cmake
cpflib/codegen/: code_generator.cpp  code_generator.h
cpflib/model/: grammar.cpp  grammar.h  rule.h
cpflib/parser/: grammar_loader.cpp  grammar_loader.h  grammar_parser.cpp
cpflib/runtime/: api.cpp  api.h  dynamic.cpp  runtime.cpp  runtime.h
cpflib/utils/: traits.h
cpftools/: CMakeLists.txt
cpftools/cpfbench/: CMakeLists.txt  benchmark_support.h  calculator_benchmarks.cpp  main.cpp  simple_c_benchmarks.cpp
cpftools/cpfbench/fixtures/grammars/: simple_c.cpf
cpftools/cpfcompare/: CMakeLists.txt  generate_fixture.py  main.cpp  yacc_driver.c  yacc_driver.h
cpftools/cpfcompare/fixtures/programs/: c_subset_fixture.c
cpftools/cpfgenheader/: CMakeLists.txt  main.cpp
cpftools/cpflibtests/: CMakeLists.txt  main.cpp
cpftools/cpflibtests/codegen/: cpfgen_cli_tests.cpp  generator_tests.cpp
cpftools/cpflibtests/codegen/snapshots/: calculator.cpp.snap  calculator.h.snap  default_attrs.cpp.snap  default_attrs.h.snap  imported_bundle.cpp.snap  imported_bundle.h.snap  namespaced_calculator.cpp.snap  namespaced_calculator.h.snap
cpftools/cpflibtests/parser/: grammar_tests.cpp
cpftools/cpflibtests/runtime/: complexity_tests.cpp  dynamic_runtime_tests.cpp  runtime_tests.cpp
cpftools/cpftests/: CMakeLists.txt
cpftools/cpftests/attributes/: attribute_tests.cpp
cpftools/cpftests/codegen/: cpfgen_cli_tests.cpp  cpfgenheader_tests.cpp  generator_tests.cpp
cpftools/cpftests/codegen/snapshots/: calculator.cpp.snap  calculator.h.snap  default_attrs.cpp.snap  default_attrs.h.snap  imported_bundle.cpp.snap  imported_bundle.h.snap  namespaced_calculator.cpp.snap  namespaced_calculator.h.snap
cpftools/cpftests/fixtures/grammars/: ambiguous_choice.cpf  attr_dir.cpf  attr_prec_labels.cpf  attr_prec_numeric.cpf  calculator.cpf  custom_errors.cpf  default_attrs.cpf  default_labels.cpf  error_choice.cpf  grouped.cpf  imported_bundle.cpf  inline_attributes.cpf  lexer_priority.cpf  lookahead.cpf  merged_definitions.cpf  message.cpf  namespaced_calculator.cpf  quantified.cpf  templates.cpf  tokens.cpf  user_data.cpf
cpftools/cpftests/fixtures/grammars/imports/: imported_expr.cpf  imported_words.cpf
cpftools/cpftests/fixtures/grammars/imports/nested/: imported_literals.cpf
cpftools/cpftests/parser/: grammar_tests.cpp
cpftools/cpftests/runtime/: complexity_tests.cpp  dynamic_runtime_tests.cpp  library_runtime_tests.cpp  runtime_tests.cpp
cpftools/cpftests/single_header/: cpflib_implementation.cpp
cpftools/support/: doctest.cmake  doctest.h
cpftools/yacc-compare/: CMakeLists.txt  README.md  main.cpp
cpftools/yacc-compare/fixtures/grammars/: c_subset.cpf  c_subset.y
cpftools/yacc-compare/fixtures/programs/: c_subset_fixture.c
examples/: CMakeLists.txt  README.md  calculator.cpf  calculator.cpp  calculator_dynamic.cpp  json.cpf  json.cpp
examples/error_reporting/: config_diagnostics.cpf  config_diagnostics.cpp
examples/parse_forests/: dangling_else.cpf  dangling_else.cpp
examples/partial_trees/: markdown_partial.cpf  markdown_partial.cpp
examples/source_repair/: expression_autofix.cpf  expression_autofix.cpp
include/: cpf.hpp  cpflib
wiki/: README.md  generation-and-integration.md  grammar-reference.md  runtime-api.md  tooling.md
